<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".Dash1">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:src="@drawable/dlocker" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:textStyle="bold"
        android:text="Welcome to Digital Locker !"
        android:textSize="@dimen/_15ssp"
        android:textColor="#000000"
        android:layout_marginStart="@dimen/_25sdp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_2sdp"
        android:background="#161414"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_105sdp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/locker"
        android:layout_marginEnd="@dimen/_10sdp"
        android:textSize="@dimen/_13ssp"
        android:textColor="#000000"
        android:layout_marginStart="@dimen/_25sdp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:textStyle="bold"
        android:text="Various Advantages of Digital locker !"
        android:textSize="@dimen/_15ssp"
        android:textColor="#000000"
        android:layout_marginStart="@dimen/_25sdp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_2sdp"
        android:background="#161414"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_30sdp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/advantage1"
        android:textSize="@dimen/_13ssp"
        android:textColor="#000000"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_25sdp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/advantage2"
        android:textSize="@dimen/_13ssp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:textColor="#000000"
        android:layout_marginStart="@dimen/_25sdp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/advantage3"
        android:layout_marginEnd="@dimen/_15sdp"
        android:textSize="@dimen/_13ssp"
        android:textColor="#000000"
        android:layout_marginBottom="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_25sdp"/>


</LinearLayout>